# glynac-family-tree

./: README.md  pyproject.toml
docs/: architecture.md  flow_diagram.md  relationship_rules.md
input/: sample_input.txt
src/family_tree/: __init__.py  api.py  constants.py  enums.py  main.py
src/family_tree/bootstrap/: family_initializer.py
src/family_tree/models/: person.py
src/family_tree/relationships/: __init__.py  base.py  brother_in_law_resolver.py  common.py  daughter_resolver.py  maternal_aunt_resolver.py  maternal_uncle_resolver.py  paternal_aunt_resolver.py  paternal_uncle_resolver.py  relationship_factory.py  sibling_resolver.py  sister_in_law_resolver.py  son_resolver.py
src/family_tree/repository/: family_repository.py
src/family_tree/services/: command_processor.py  family_tree_service.py
src/family_tree/templates/: terminal.html  ui.html
src/family_tree/utils/: file_reader.py
tests/: conftest.py  test_add_child.py  test_api.py  test_command_processor.py  test_family_initializer.py  test_relationships.py
