[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glynac-family-tree"
version = "1.0.0"
description = "King Arthur family tree coding challenge solution"
requires-python = ">=3.11"
dependencies = ["Flask>=3.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
